// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with readConfigution function aws cloudformation create-change-set generates command with parameters 1`] = `
Array [
  "aws",
  "cloudformation",
  "create-change-set",
  "--parameters",
  "ParameterKey=key1,ParameterValue=value1",
  "ParameterKey=key2,ParameterValue=value2",
  "--tags",
  "Key=tagKey1,Value=tagValue1",
  "Key=tagKey2,Value=tagValue2",
]
`;

exports[`with readConfigution function aws cloudformation create-change-set generates command with parameters 2`] = `
Array [
  "aws",
  "cloudformation",
  "create-change-set",
  "--parameters",
  "ParameterKey=key1,ParameterValue=value1",
  "ParameterKey=key2,ParameterValue=value2",
  "--tags",
  "Key=tagKey1,Value=tagValue1",
  "Key=tagKey2,Value=tagValue2",
]
`;

exports[`with readConfigution function aws cloudformation create-stack generates command with parameters 1`] = `
Array [
  "aws",
  "cloudformation",
  "create-stack",
  "--parameters",
  "ParameterKey=key1,ParameterValue=value1",
  "ParameterKey=key2,ParameterValue=value2",
  "--tags",
  "Key=tagKey1,Value=tagValue1",
  "Key=tagKey2,Value=tagValue2",
]
`;

exports[`with readConfigution function aws cloudformation create-stack-instances generates command with parameters 1`] = `
Array [
  "aws",
  "cloudformation",
  "create-stack-instances",
  "--parameter-overrides",
  "ParameterKey=key1,ParameterValue=value1",
  "ParameterKey=key2,ParameterValue=value2",
]
`;

exports[`with readConfigution function aws cloudformation create-stack-set generates command with parameters 1`] = `
Array [
  "aws",
  "cloudformation",
  "create-stack-set",
  "--parameters",
  "ParameterKey=key1,ParameterValue=value1",
  "ParameterKey=key2,ParameterValue=value2",
  "--tags",
  "Key=tagKey1,Value=tagValue1",
  "Key=tagKey2,Value=tagValue2",
]
`;

exports[`with readConfigution function aws cloudformation deploy generates command with parameters 1`] = `
Array [
  "aws",
  "cloudformation",
  "deploy",
  "--parameter-overrides",
  "key1=value1",
  "key2=value2",
  "--tags",
  "tagKey1=tagValue1",
  "tagKey2=tagValue2",
]
`;

exports[`with readConfigution function aws cloudformation deploy with help as last argument does not add parameters 1`] = `
Array [
  "aws",
  "cloudformation",
  "deploy",
  "help",
]
`;

exports[`with readConfigution function aws cloudformation update-stack generates command with parameters 1`] = `
Array [
  "aws",
  "cloudformation",
  "update-stack",
  "--parameters",
  "ParameterKey=key1,ParameterValue=value1",
  "ParameterKey=key2,ParameterValue=value2",
  "--tags",
  "Key=tagKey1,Value=tagValue1",
  "Key=tagKey2,Value=tagValue2",
]
`;

exports[`with readConfigution function aws cloudformation update-stack-instances generates command with parameters 1`] = `
Array [
  "aws",
  "cloudformation",
  "update-stack-instances",
  "--parameter-overrides",
  "ParameterKey=key1,ParameterValue=value1",
  "ParameterKey=key2,ParameterValue=value2",
]
`;

exports[`with readConfigution function aws cloudformation update-stack-set generates command with parameters 1`] = `
Array [
  "aws",
  "cloudformation",
  "update-stack-set",
  "--parameters",
  "ParameterKey=key1,ParameterValue=value1",
  "ParameterKey=key2,ParameterValue=value2",
  "--tags",
  "Key=tagKey1,Value=tagValue1",
  "Key=tagKey2,Value=tagValue2",
]
`;

exports[`with readConfigution function aws non-parameter command generates command with parameters 1`] = `
Array [
  "aws",
  "sts",
]
`;

exports[`with readConfigution function rain deploy generates command with parameters 1`] = `
Array [
  "rain",
  "deploy",
  "--params",
  "key1=value1,key2=value2",
  "--tags",
  "tagKey1=tagValue1,tagKey2=tagValue2",
]
`;

exports[`with readConfigution function rain deploy with --help as last argument does not add parameters 1`] = `
Array [
  "rain",
  "deploy",
  "--help",
]
`;

exports[`with readConfigution function rain deploy with -h as last argument does not add parameters 1`] = `
Array [
  "rain",
  "deploy",
  "-h",
]
`;

exports[`with readConfigution function sam deploy generates command with parameters 1`] = `
Array [
  "sam",
  "deploy",
  "--parameter-overrides",
  "ParameterKey=key1,ParameterValue=value1",
  "ParameterKey=key2,ParameterValue=value2",
  "--tags",
  "Key=tagKey1,Value=tagValue1",
  "Key=tagKey2,Value=tagValue2",
]
`;

exports[`with readConfigution function sam deploy with --help as last argument does not add parameters 1`] = `
Array [
  "sam",
  "deploy",
  "--help",
]
`;
